--- a/index.html
+++ b/index.html
@@ -39,11 +39,15 @@
     <header class="header" id="jsheader">
         <div class="container">
                 <div class="header__inner">
+                    <button class="hamburger" id="mobile-menu-btn">
+                        <div class="btn__hamb">
+                            <div></div>
+                        </div>
+                    </button>
                     <nav class="nav">
                         <a class="nav__link" href="index.html">Главная</a>
                         <a id="open-modal" class="nav__link" href="#">Контакты</a>
-                        <a class="nav__link" href="#works">ТУРЫ</a>
-                        <a id="open-wrapper" class="nav__link" href="#">Купить</a>
+                        <a id="open-wrapper" class="nav__link" href="#">Туры</a>
                     </nav>
                     
                 </div>
